# cmake-auto-increment-build-number

./: CMakeLists.txt  generate.c
C_binary_example/src/: CMakeLists.txt
Python_example/: .gitignore  CMakeLists.txt  Pipfile  README.md  config.json  generate.py
Python_example/src/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.c
